# vt-threadpool

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
doc/vt/threadpool/: readme.md
doc/vt/threadpool/channel/: clear.md  constructor.md  readme.md  recv.md  send.md
doc/vt/threadpool/thread_pool/: constructor.md  destructor.md  parfor.md  readme.md  run.md  size.md
include/vt/: channel.hpp  thread_pool.hpp
include/vt/impl/: channel.ipp  thread_pool.ipp
src/vt/: thread_pool.cpp
test/vt/: channel_test.cpp  thread_pool_test.cpp
